--- a/package.json
+++ b/package.json
@@ -1,24 +1,20 @@
 {
-  "name": "alyncoin-website",
+  "name": "alyncoin-site",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
-  },
-  "devDependencies": {
-    "@types/node": "22.14.1",
-    "@types/react": "19.1.2",
+    "next": "14.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.0"
+    "@shadcn/ui": "^0.1.0",
+    "recharts": "^2.5.0"
   }
 }
